--- a/front-end-pages/admin-pages/classes-tab/admin-create-class.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-create-class.html
@@ -4,68 +4,68 @@
     wp_enqueue_script( 'jquery', '//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js');
     wp_enqueue_script('bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
     wp_enqueue_script('angular', '//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js');
+    echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-classes.css', __FILE__ ) . '">' . "\n";
 ?>
-
 	
-	<body style="background-color: #EBEBEB">
-		<br>
+<body style="background-color: #EBEBEB">
+<br>
 
-	<!-- 
-		For a class:
-		Title
-		Date
-		Time
-		Description
-		Max number of attendees
-		Required skills	
-	-->
-		<div class="panel panel-info" style="width:60%">
-			
-			<div class="panel-heading">
-				<h3 class="panel-title">Create A New Class</h3>
-			</div>
+<!-- 
+    For a class:
+    Title
+    Date
+    Time
+    Description
+    Max number of attendees
+    Required skills	
+-->
+<div class="panel panel-info" style="width:60%">
 
-			<div class="panel-body">
-				<div class="row">
-					<form class="form-horizontal">
-						<div class="form-group">
-							<label for="title" class="col-md-3 control-label">Class Title</label>
-							<input type="text" style="width: 60%" class="col-md-6 form-control" id="title" placeholder="Title" required>
-						</div>
+    <div class="panel-heading">
+        <h3 class="panel-title">Create A New Class</h3>
+    </div>
 
-						<div class="form-group">
-							<label for="date" class="col-md-3 control-label">Date</label>
-							<input type="date" style="width: 60%" class="col-md-6 form-control" id="date" placeholder="Date" required>
-						</div>
+    <div class="panel-body">
+        <div class="row">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="title" class="col-md-3 control-label">Class Title</label>
+                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="title" placeholder="Title" required>
+                </div>
 
-						<div class="form-group">
-							<label for="start" class="col-md-3 control-label">Start Time</label>
-							<input type="time" style="width: 60%" class="col-md-6 form-control" id="start" placeholder="Start Time" required>
-						</div>
+                <div class="form-group">
+                    <label for="date" class="col-md-3 control-label">Date</label>
+                    <input type="date" style="width: 60%" class="col-md-6 form-control" id="date" placeholder="Date" required>
+                </div>
 
-						<div class="form-group">
-							<label for="end" class="col-md-3 control-label">End Time</label>
-							<input type="time" style="width: 60%" class="col-md-6 form-control" id="end" placeholder="End Time" required>
-						</div>
+                <div class="form-group">
+                    <label for="start" class="col-md-3 control-label">Start Time</label>
+                    <input type="time" style="width: 60%" class="col-md-6 form-control" id="start" placeholder="Start Time" required>
+                </div>
 
-						<div class="form-group">
-							<label for="description" class="col-md-3 control-label">Description</label>
-							<input type="text" style="width: 60%" class="col-md-6 form-control" id="description" placeholder="Description">
-						</div>
+                <div class="form-group">
+                    <label for="end" class="col-md-3 control-label">End Time</label>
+                    <input type="time" style="width: 60%" class="col-md-6 form-control" id="end" placeholder="End Time" required>
+                </div>
 
-						<div class="form-group">
-							<label for="attendees" class="col-md-3 control-label">Maximum # Attendees</label>
-							<input type="text" style="width: 60%" class="col-md-6 form-control" id="attendees" placeholder="Maxiumum # of Attendees" required>
-						</div>
+                <div class="form-group">
+                    <label for="description" class="col-md-3 control-label">Description</label>
+                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="description" placeholder="Description">
+                </div>
 
-						<div class="form-group">
-							<label for="skills" class="col-md-3 control-label">Required Skills</label>
-							<input type="text" style="width: 60%" class="col-md-6 form-control" id="skills" placeholder="Required Skills, If Any">
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
+                <div class="form-group">
+                    <label for="attendees" class="col-md-3 control-label">Maximum # Attendees</label>
+                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="attendees" placeholder="Maxiumum # of Attendees" required>
+                </div>
 
-		<button class="btn mas-create">Submit New Class</button>
-	</body>
+                <div class="form-group">
+                    <label for="skills" class="col-md-3 control-label">Required Skills</label>
+                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="skills" placeholder="Required Skills, If Any">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<button class="btn mas-create">Submit New Class</button>
+</body>
