--- a/front-end-pages/admin-pages/classes-tab/admin-classes.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.html
@@ -7,7 +7,7 @@
 		<title>Classes</title>
 	</head>
 
-	<body>
+	<body style="background-color: #EBEBEB">
 		<br>
 		<div class="row">
 			<div class="col-md-5">
@@ -26,32 +26,37 @@
 			</div>
 
 			<div class="col-md-6">
-				<table class="table table-bordered table-hover">
+				<table class="table table-bordered table-striped table-hover" style="background-color: white">
 					<tr>
+						<th></th>
 						<th>Class Title</th>
 						<th>Date</th>
 						<th># Registered</th>
 					</tr>
 
 					<tr>
+						<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
 						<td>Power Tools 101</td>
 						<td>3/30/2017</td>
 						<td>12/20</td>
 					</tr>
 
 					<tr>
+						<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
 						<td>Intro to Raspberry Pi</td>
 						<td>2/30/2017</td>
 						<td>10/15</td>
 					</tr>
 
 					<tr>
+						<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
 						<td>Build Your Own Skateboard</td>
 						<td>4/2/2017</td>
 						<td>8/10</td>
 					</tr>
 
 					<tr>
+						<th style="text-align: center"><i class="fa fa-trash" aria-hidden="true"></i></th>
 						<td>Power Tools 101</td>
 						<td>3/30/2017</td>
 						<td>12/20</td>
@@ -67,6 +72,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	</body>
